# gtk-terminal

gtk-terminal/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.ac
gtk-terminal/pixmaps/: Makefile.am  Makefile.in
gtk-terminal/po/: POTFILES.in  gtk-terminal.pot  zh_CN.gmo  zh_CN.po
gtk-terminal/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  font.c  font.h  gtk-terminal.h  i18n.h  main.c  menu.c  menu.h  window.c  window.h
